fix: Java 8 compatibility in FileDownloadRouterHandler (var → Map, Path.of → Paths.get)